--- a/client/src/FormComponent.css
+++ b/client/src/FormComponent.css
@@ -11,6 +11,7 @@ input {
     font-size: 16px;
   }
   #resultdiv div {
-    margin-top: 0px !important
+    margin-top: 0px !important;
+    text-align: left;
   }
   
