front end updates

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,3 +56,13 @@ label[for=collapsed] {
 .display-true {
   display:block;
 }
+
+.eg-text {
+  background-color: #383838;
+  padding:3px;
+  font-style: italic;
+}
+
+.collapse-checkbox {
+  margin-bottom:1.5em;
+}
